--- a/hw3/N10.html
+++ b/hw3/N10.html
@@ -39,7 +39,7 @@
 
     		mood(3);*/
 
-			/*let randomDiap = (n, m) => {
+			let randomDiap = (n, m) => {
             	return Math.floor( Math.random() * (m - n + 1) ) + n;
 			}
 
@@ -49,19 +49,21 @@
 				console.log( 'цветов: ' + colorsCount );
 
 				let obj = {};
+				let count = 0;
 
-				while (Object.keys(obj).length < colorsCount) {
+				while (count < colorsCount) {
 					let n = randomDiap(1, 7);
 					if (colors[n] in obj === false) {
 						obj[colors[n]] = 1;
+						count += 1;
 						console.log( colors[n] );
 					}
 				}
 			}
 
-    		mood(3);*/
+    		mood(3);
 
-			let randomDiap = (n, m) => {
+			/*let randomDiap = (n, m) => {
             	return Math.floor( Math.random() * (m - n + 1) ) + n;
 			}
 
@@ -81,7 +83,7 @@
 				}
 			}
 
-    		mood(3);
+    		mood(3);*/
 	
 
 		</script>
