--- a/index.html
+++ b/index.html
@@ -16,91 +16,89 @@
 
 			'use strict'
 
-			let deepComp = (input1, input2) => {
-				if (input1 === input2) {
-					return true;
-				}
-				if (Number.isNaN(input1) && Number.isNaN(input2)) {
-					return true;
-				}
-				if ( typeof input1 !== "object" || typeof input2 !== "object" || input1 === null || input2 === null) {
-					return false;
-				}
-				if ( Array.isArray(input1) !== Array.isArray(input2) ) {
-  					return false;
-				}
-				if ( Array.isArray(input1) ) {
-					if (input1.length !== input2.length) {
-						return false;
-					}
+			let calc = (str) => {
+				let arr = str.split(' ');
+				let arrNum = [];
 
-					for (let i = 0; i < input1.length; i++) {
-						if ( input1[i] !== input2[i]) {
-							if( !deepComp(input1[i], input2[i]) ){
-								return false;
-							}			
-						}
+				for (let i = 0; i < arr.length; i++) {                      //Преобразовываю в числа
+					if ( parseFloat(arr[i]) || parseFloat(arr[i]) === 0) {
+						arrNum[i] = parseFloat(arr[i]);
+					} else {
+						arrNum[i] = arr[i];
 					}
-
-					return true;
 				}
-				if ( !Array.isArray(input1) ){	
-					if ( Object.keys(input1).length !== Object.keys(input2).length ){
-						return false;
-					}
+				//console.log(arrNum);
 
-					for (let key in input1) {
-						if (key in input2 === false) { 
-							return false;
-						}
-						if (input1[key] !== input2[key]) {
-							if( !deepComp (input1[key], input2[key]) ) {
-								return false;
+				let innerCalc = (arrNum) => {
+
+					let operations = [
+						{'*': (a, b) => a * b},
+						{'/': (a, b) => a / b},
+						{'+': (a, b) => a + b},
+						{'-': (a, b) => a - b},
+					];
+					let result;
+
+					for (let b = 0 ; b < operations.length; b++) { 
+						for (let i = 0; i < arrNum.length; i++){
+
+							if (arrNum.includes('(')) {
+								let sum = 0; //Счетчик скобок
+								let i2;
+								i = arrNum.indexOf('(');
+								for (let a = arrNum.indexOf('(') + 1; a < arrNum.length; a++) {
+									 //Нахожу индекс соответствующей закрыающей скобки
+									if ( arrNum[a] === '(' ) {
+										sum += 1;
+									}
+									if ( arrNum[a] === ')' ) {
+										if (sum === 0){
+											i2 = a; //Индекс закрывающей
+											break;
+										}
+										sum -= 1;
+									}
+								}
+								//console.log(i);
+								//console.log(i2);
+						
+								arrNum[i] = innerCalc( arrNum.splice( i + 1, (i2 - i - 1) ) ); //Создаю массив из выражения внутри скобок и рекурсивно вызываю функцию для него, а потом вставляю вместо открывающий скобки результат выражения
+								//console.log(arrNum[i]);
+								//console.log(arrNum); 
+								arrNum.splice( i + 1, 1); //Отрезаю закрывающую скобку
+								//console.log(arrNum); 
+								return innerCalc(arrNum); //Вызываю функцию для нового массива без скобок
 							}
-						}
+						
+							if (operations[b][ arrNum[i] ]) {				
+								result = operations[b][ arrNum[i] ]( arrNum[i - 1], arrNum[i + 1] );
+								//console.log(arrNum);
+								//console.log(i);
+								arrNum.splice(i - 1, 3, result);
+								//console.log(arrNum);
+							} 
+						}						
 					}
-
-					return true;
+					return result;
 				}
+				return innerCalc(arrNum);	
 			}
 
-			let H1 = { a:5, b: { b1:6, b2:7 } };
-			let H2 = { b: { b1:6, b2:7 }, a:5 };
-			let H3 = { a:5, b: { b1:6 } };
-			let H4 = { a:5, b: { b1:66, b2:7 } };
-			let H5 = { a:5, b: { b1:6, b2:7, b3:8 } };
-			let H6 = { a:null, b:undefined, c:Number.NaN };
-			let H7 = { c:Number.NaN, b:undefined, a:null };
-			let H8 = {a:5,b:6};
-			let H9 = {c:5,d:6};
-			let H10 = {a:5};
-			let A1 = [5,7];
-			let A2 = [5,5,7];
-			let A3 = [5,8,7];
+			alert( calc( prompt('Введите выражение, отеляя цифры и знаки пробелом') ) );
 
 			let tests=[
-				{ id:1, expr: deepComp(H1, H2), res:true},
-				{ id:2, expr: deepComp(H1, H3), res:false},
-				{ id:3, expr: deepComp(H1, H4), res:false},
-				{ id:4, expr: deepComp(H1, H5), res:false},
-				{ id:5, expr: deepComp(H6, H7), res:true},
-				{ id:6, expr: deepComp(H8, H9), res:false},
-				{ id:7, expr: deepComp(H8, H10), res:false},
-				{ id:8, expr: deepComp(null, H10), res:false},
-				{ id:9, expr: deepComp(H10, null), res:false},
-				{ id:10, expr: deepComp(null, null), res:true},
-				{ id:11, expr: deepComp(null, undefined), res:false},
-				{ id:12, expr: deepComp(5, "5"), res:false},
-				{ id:13, expr: deepComp(5, H1), res:false},
-				{ id:14, expr: deepComp(A1, H1), res:false},
-				{ id:15, expr: deepComp(A2, A3), res:false},
-				{ id:16, expr: deepComp({a:5,b:undefined}, {a:5,c:undefined}), res:false},
-				{ id:17, expr: deepComp([5,7],{0:5,1:7}), res:false},
-				{ id:18, expr: deepComp([5,7], {0:5,1:7,length:2}), res:false},
-				{ id:19, expr: deepComp("aaa","bbb"), res:false},
-				{ id:20, expr: deepComp(Number.NaN,Number.NaN), res:true},
-				{ id:21, expr: deepComp([{a:5},2],[{a:5},7]), res:false},
-				{ id:22, expr: deepComp({a:{b:6},c:7}, {a:{b:6},c:8}), res:false},
+				{ id:1, expr: calc('2 * ( -3 + 1 )'), res:-4},
+				{ id:2, expr: calc('( 3 + 5 ) / 2'), res:4},
+				{ id:3, expr: calc('( 3 + 5 ) / ( 1 + 1 )'), res:4},
+				{ id:4, expr: calc('25 / ( 3 * 2 - 1 )'), res:5},
+				{ id:5, expr: calc('25 / 0'), res:Infinity},
+				{ id:6, expr: calc('25 + ( 3 + 0 )'), res:28},
+				{ id:7, expr: calc('25 + ( 3 + ( 2 - 3 ) )'), res:27},
+				{ id:8, expr: calc('25 + ( 3 * ( 2 - 3 ) )'), res:22},
+				{ id:9, expr: calc('25 + ( 3 * ( 12 / ( 6 - 3 ) ) )'), res:37},
+				{ id:10, expr: calc('25 + ( 3 + ( 2 - 3 ) ) / ( 6 - 2 )'), res:25.5},
+				{ id:11, expr: calc('0.5 + 0.5'), res:1},
+				{ id:12, expr: calc('-2 + 0.2 * ( 0.5 + 1.5 )'), res:-1.6},
 			];
 
 			let correctTests = 0;
@@ -116,7 +114,6 @@
 			}
 			let statistic = ( correctTests / (correctTests + failedTests) ) * 100;
 			console.log(`Процент верных тестов: ${statistic.toFixed(2)}%`);
-	
 
 		</script>
 
