Corrected mistakes in russian

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				return innerCalc(arrNum);	
 			}
 
-			alert( calc( prompt('Введите выражение, отеляя цифры и знаки пробелом') ) );
+			alert( calc( prompt('Введите выражение, отделяя цифры и знаки пробелом') ) );
 
 			let tests=[
 				{ id:1, expr: calc('2 * ( -3 + 1 )'), res:-4},
