--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
 				for (let i = 0; i < str.length; i++){        //Преобразовываю в числа и записываю в массив
 					if ( oper.has( str[i] ) ) {
 						if (str[i] === '-' && number === '') {
-							number = '-'
+							if (str[i - 1] === ')') {
+								arrNum.push( str[i] );
+							} else {
+								number = '-';
+							}
 						} else {
 							if (number === ''){
 								arrNum.push( str[i] );
-							} else {
+							} else if(number === '-' && str[i] === '('){
+								arrNum.push( -1, '*', str[i] );
+								number = '';
+							}
+							else {
 								arrNum.push( parseFloat(number), str[i] );
 								number = '';
 							}
@@ -97,11 +105,17 @@
 						
 							if (operations[b][ arrNum[i] ]) {				
 								result = operations[b][ arrNum[i] ]( arrNum[i - 1], arrNum[i + 1] );
-								//console.log(arrNum);
+								//console.log(`${arrNum} arrNum 1`);
+								//console.log(`${result} result`);
 								//console.log(i);
 								arrNum.splice(i - 1, 3, result);
-								//console.log(arrNum);
-							} 
+								//console.log(`${arrNum} arrNum 2`);
+								//console.log(i);
+								if (arrNum.length > 1) {
+								//console.log(innerCalc(arrNum));
+									return innerCalc(arrNum);
+								}						
+							}
 						}						
 					}
 					return result;
@@ -124,6 +138,13 @@
 				{ id:10, expr: calc('25+(3+(2-3))/(6-2)'), res:25.5},
 				{ id:11, expr: calc('0.5+0.5'), res:1},
 				{ id:12, expr: calc('-2+0.2*(0.5+1.5)'), res:-1.6},
+				{ id:13, expr: calc('-(2+2)'), res:-4},
+				{ id:14, expr: calc('-3+2'), res:-1},
+				{ id:15, expr: calc('-3*(2.3+0.7)-1'), res:-10},
+				{ id:16, expr: calc('-3*(-(5-3)*2)-1'), res:11},
+				{ id:17, expr: calc('-2*3*-1*4'), res:24},
+				{ id:18, expr: calc('-2*6+(2-4*-3)/2'), res:-5},
+				{ id:19, expr: calc('-2*6+(3-5*-3)/2/3'), res:-9},
 			];
 
 			let correctTests = 0;
