--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 		<meta name="HandheldFriendly" content="True"/> <!--В некоторых случаях смартфоны автоматически изменяют масштаб страницы, лучше эту возможность отключать-->
 		<!-- saved from url=(0014)about:internet -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge"/> <!--Для включения сглаживания шрифтов -->
-		<meta http-equiv="cleartype" content="on"/> <!--Чтобы переключить Internet Explorer в режим последней версии -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge"/> <!--Чтобы переключить Internet Explorer в режим последней версии --> 
+		<meta http-equiv="cleartype" content="on"/><!--Для включения сглаживания шрифтов -->
 		
 	</head>
 	<body>
@@ -68,6 +68,7 @@
 			console.log( formatNumber(12345.368,"# ## ## ##.##") );
 			console.log( formatNumber(12345.1,"# ### ###") );
 			console.log( formatNumber(12345.1,"# ### ###.") );
+			console.log( formatNumber(23.546,"# ### ###.") );
 			
 				
 		</script>
