Add buttons to N20 and did coctail object in N13

--- a/hw4/N20.html
+++ b/hw4/N20.html
@@ -12,6 +12,9 @@
 	</head>
 	<body>
 
+		<input type=button value='корни' onclick='ttt()'>
+		<input type=button value='авто-тесты' onclick='squareRootsTests()'>
+
 		<script>
 
 			'use strict'
@@ -103,7 +106,6 @@
 				}
 
 			}
-			//squareRootsTests();
 
 			function ttt() {
 				const a = Number( prompt('Введите a') );
@@ -121,7 +123,6 @@
 					alert('два корня: '+roots[0]+' и '+roots[1]);
 				}
 			}
-			ttt();
 				
 		</script>
 
