Corrected mistakes in Russian

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 			let ways = [ [0, 0] ]; //первое число строка, второе столбец
 
-			//Чтобы задать позицию коня, внесите в соответствующий угол доски 'H' (H = hourse) и исправте координаты в ways
+			//Чтобы задать позицию коня, внесите в соответствующий угол доски 'H' (H = hourse) и исправьте координаты в ways
 
 			let moveHorse = (result, step) => {
 				//console.log(JSON.stringify(result)); 
